remove final use of sun.misc.Unsafe